<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffc000">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvChooseLesson"
            android:gravity="center"
            android:textSize="30dp" android:textStyle="bold" android:textColor="#525252" android:password="false"
            android:singleLine="false"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvCategory1"
                android:layout_weight="8" android:layout_marginLeft="30dp"
                android:textSize="15dp" android:textStyle="italic" android:textColor="#525252"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/tvDifficulty"
                  android:id="@id/tvWord" android:layout_weight="3"
                  android:gravity="center" android:textSize="15dp" android:textStyle="italic"
                  android:textColor="#525252"/>
    </LinearLayout>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView" android:layout_gravity="center_vertical|left" android:layout_weight="7"
            />

</LinearLayout>

