<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#525252">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvYourResult" android:textSize="30dp" android:gravity="center"
            android:textColor="@android:color/holo_orange_light" android:text="@string/tvYourResult"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tvResult" android:textSize="20dp" android:gravity="center"
            android:textColor="@android:color/holo_orange_light"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCategory2"
            android:id="@+id/tvCategory2" android:textSize="30dp" android:gravity="center"
            android:textColor="@android:color/holo_orange_light"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="транспорт"
            android:id="@+id/tvCategoryResult" android:textSize="20dp" android:gravity="center"
            android:textColor="@android:color/holo_orange_light"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnToLesson"
            android:id="@+id/btnToLesson" android:textSize="30dp" android:onClick="onClickChooseLesson"
            android:background="@android:drawable/progress_horizontal"
            android:textColor="@android:color/holo_orange_light"/>
</LinearLayout>